--- a/src/agh/edu/pl/rogus/view/fizzBuzzView.fxml
+++ b/src/agh/edu/pl/rogus/view/fizzBuzzView.fxml
@@ -16,12 +16,14 @@
       <Button fx:id="mapStrategyButton" layoutX="-1.0" layoutY="100.0" mnemonicParsing="false" onAction="#handleMapStrategyButton" prefHeight="50.0" prefWidth="200.0" text="MapStrategy" />
       <TextArea fx:id="textArea" layoutX="219.0" layoutY="214.0" prefHeight="371.0" prefWidth="562.0" />
       <Button fx:id="fizzBuzzButton" layoutX="667.0" layoutY="150.0" mnemonicParsing="false" onAction="#handleFizzBuzz" text="FizzBuzz!" />
-      <TextField fx:id="fromField" layoutX="278.0" layoutY="100.0" prefHeight="24.0" prefWidth="145.0" />
+      <TextField fx:id="fromField" layoutX="278.0" layoutY="88.0" prefHeight="24.0" prefWidth="145.0" />
       <TextField fx:id="toField" layoutX="278.0" layoutY="150.0" prefHeight="24.0" prefWidth="145.0" />
-      <Label layoutX="219.0" layoutY="100.0" prefHeight="24.0" prefWidth="49.0" text="From" />
+      <Label layoutX="219.0" layoutY="88.0" prefHeight="24.0" prefWidth="49.0" text="From" />
       <Label layoutX="219.0" layoutY="150.0" prefHeight="24.0" prefWidth="41.0" text="To" />
-      <Label layoutX="219.0" layoutY="42.0" prefHeight="16.0" prefWidth="49.0" text="Strategy" />
-      <TextField fx:id="strategyName" layoutX="278.0" layoutY="38.0" prefHeight="10.0" prefWidth="145.0" />
-      <Text fx:id="noStrategy" fill="#ff0101" layoutX="278.0" layoutY="75.0" strokeType="OUTSIDE" strokeWidth="0.0" text="No strategy choosen" visible="false" wrappingWidth="145.0" />
+      <Label layoutX="219.0" layoutY="34.0" prefHeight="16.0" prefWidth="49.0" text="Strategy" />
+      <TextField fx:id="strategyNameField" editable="false" layoutX="278.0" layoutY="30.0" prefHeight="10.0" prefWidth="145.0" />
+      <Text fx:id="noStrategy" fill="#ff0101" layoutX="278.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="No strategy choosen" wrappingWidth="145.0" />
+      <Text fx:id="noFromValue" fill="RED" layoutX="278.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose starting value" wrappingWidth="136.28271484375" />
+      <Text fx:id="noToValue" fill="RED" layoutX="278.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose ending value" wrappingWidth="136.28271484375" />
    </children>
 </AnchorPane>
