--- a/src/agh/edu/pl/rogus/view/fizzBuzzView.fxml
+++ b/src/agh/edu/pl/rogus/view/fizzBuzzView.fxml
@@ -10,11 +10,12 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="agh.edu.pl.rogus.view.fizzBuzzController">
    <children>
-      <ListView layoutX="-1.0" prefHeight="600.0" prefWidth="200.0" />
-      <Button fx:id="recursionStrategyButton" layoutX="-1.0" mnemonicParsing="false" onAction="#handleRecursionStrategyButton" prefHeight="50.0" prefWidth="200.0" text="RecursionStrategy" />
-      <Button fx:id="forEachStrategyButton" layoutX="-1.0" layoutY="50.0" mnemonicParsing="false" onAction="#handleForEachStrategyButton" prefHeight="50.0" prefWidth="200.0" text="ForEachStrategy" />
-      <Button fx:id="mapStrategyButton" layoutX="-1.0" layoutY="100.0" mnemonicParsing="false" onAction="#handleMapStrategyButton" prefHeight="50.0" prefWidth="200.0" text="MapStrategy" />
-      <TextArea fx:id="textArea" layoutX="219.0" layoutY="214.0" prefHeight="371.0" prefWidth="562.0" />
+      <ListView prefHeight="600.0" prefWidth="200.0" />
+      <Button fx:id="recursionStrategyButton" mnemonicParsing="false" onAction="#handleRecursionStrategyButton" prefHeight="50.0" prefWidth="200.0" text="RecursionStrategy" />
+      <Button fx:id="simpleStrategyButton" layoutY="50.0" mnemonicParsing="false" onAction="#handleSimpleStrategyButton" prefHeight="50.0" prefWidth="200.0" text="SimpleStrategy" />
+      <Button fx:id="forEachStrategyButton" layoutY="100.0" mnemonicParsing="false" onAction="#handleForEachStrategyButton" prefHeight="50.0" prefWidth="200.0" text="ForEachStrategy" />
+      <Button fx:id="mapStrategyButton" layoutY="150.0" mnemonicParsing="false" onAction="#handleMapStrategyButton" prefHeight="50.0" prefWidth="200.0" text="MapStrategy" />
+      <TextArea fx:id="textArea" editable="false" layoutX="219.0" layoutY="214.0" prefHeight="371.0" prefWidth="562.0" />
       <Button fx:id="fizzBuzzButton" layoutX="667.0" layoutY="150.0" mnemonicParsing="false" onAction="#handleFizzBuzz" text="FizzBuzz!" />
       <TextField fx:id="fromField" layoutX="278.0" layoutY="88.0" prefHeight="24.0" prefWidth="145.0" />
       <TextField fx:id="toField" layoutX="278.0" layoutY="150.0" prefHeight="24.0" prefWidth="145.0" />
